temporary fix for nav on mobile

--- a/src/sass/components/_nav.sass
+++ b/src/sass/components/_nav.sass
@@ -1,5 +1,4 @@
 .main-nav
-    min-height: 100vh
     padding: .5rem 1rem
     font-family: $font-ALK
 
