--- a/src/sass/layout/_grid.sass
+++ b/src/sass/layout/_grid.sass
@@ -5,9 +5,16 @@ body
 .main
     grid-column: 2 / 3
 
+    @media only screen and (max-width: 1049px)
+        grid-column: 1 / 3
+
 .header
     width: 28rem
     height: 100vh
     position: fixed
     top: 0
     left: 0
+
+    @media only screen and (max-width: 1049px)
+        width: 0
+        overflow: hidden
